modified explanation on __name__

--- a/modules/ch1.ipynb
+++ b/modules/ch1.ipynb
@@ -55,7 +55,7 @@
     "# adding custom locations to sys.path\n",
     "# assuming module is present in C:\\Users\\username\\Desktop\\mymodules\n",
     "\n",
-    "sys.path.append(r'C:\\Users\\username\\Desktop\\mymodules')\n",
+    "sys.path.append(r'Custom Location')\n",
     "\n",
     "# now the moduls in custom location can be imported"
    ]
@@ -127,17 +127,18 @@
    "id": "5bf3e315",
    "metadata": {},
    "source": [
-    "<p>Function call inside modules and __name__ for rescue</p>\n",
     "<p>__name__ is a built-in variable and returns the current namespace</p>\n",
-    "<p>including function calls in modules leads to redundant function calls in calling script</p>\n",
+    "<p>value of __name__  is equal to __main__ in the currently running script</p>\n",
+    "<p>value of __name__  is equal to module name when it is imported in another script</p>\n",
+    "<p>To illustrate the value of __name__, our hello.py module is modified and added with new lines to print the value of __name__ and also the call the function in the module from within the module</p>\n",
     "\n",
     "<p> modifying the module definition with function calls</p>\n",
     "\n",
     "<p>def addnum(a,b):</p>\n",
-    "<p>    return a+b</p>\n",
+    "<p>&nbsp&nbsp&nbsp&nbsp return a+b</p>\n",
     "\n",
     "<p>def divnum(a,b):</p>\n",
-    "<p>    return a/b</p>\n",
+    "<p>&nbsp&nbsp&nbsp&nbsp return a/b</p>\n",
     "<p>print(\"calling from module:\",__name__</p>\n",
     "<p>print(\"calling from module:\",addnum(28,4))</p>\n",
     "<p>print(\"calling from module:\",divnum(28,4))</p>\n",
@@ -163,8 +164,7 @@
     "<p>\"calling from module:\" 7.0</p>\n",
     "\n",
     "\n",
-    "<p># redundant function call can be avoided by modifying the module as below</p>\n",
-    "<p>#function calls to be included in the below if directive</p>\n",
+    "<p>#function calls can be included in the module within the below if directive, so that the functions will be called only the module is executed as a stand alone script</p>\n",
     "<p> if __name__ == '__main__': </p>\n",
     "<p>print(\"calling from module:\",__name__</p>\n",
     "<p>print(\"calling from module:\",addnum(28,4))</p>\n",
