more examples on oops

--- a/oops/ch2.ipynb
+++ b/oops/ch2.ipynb
@@ -5,39 +5,38 @@
    "id": "dedc8661",
    "metadata": {},
    "source": [
-    "Inheritance\n",
-    "Supported inheritance\n",
-    "Single\n",
-    "Multiple\n",
-    "Multilevel\n",
+    "<p>Inheritance</p>\n",
+    "<p>Supported inheritance</p>\n",
+    "<p>Single</p>\n",
+    "<p>Multiple</p>\n",
+    "<p>Multilevel</p>\n",
     "\n",
-    "Example for single inheritance\n",
-    "class A:\n",
-    "   some definition\n",
+    "<p>Example for single inheritance</p>\n",
+    "<p>class A:</p>\n",
+    "<p>&nbsp&nbsp&nbsp&nbsp some definition</p>\n",
     "   \n",
-    "class B(A):  \n",
-    "   pass \n",
+    "<p>class B(A):</p>\n",
+    "<p>&nbsp&nbsp&nbsp&nbsp pass \n",
     "   \n",
-    "Example for multilevel inheritance\n",
-    "class A:\n",
-    "   some definition\n",
+    "<p>Example for multilevel inheritance</p>\n",
+    "<p>class A:</p>\n",
+    "<p>&nbsp&nbsp&nbsp&nbsp some definition</p>\n",
     "   \n",
-    "class B(A):  \n",
-    "   some definition\n",
+    "<p>class B(A):</p>\n",
+    "<p>&nbsp&nbsp&nbsp&nbsp some definition</p>\n",
     "   \n",
-    "class C(B):\n",
-    "   some definition\n",
+    "<p>class C(B):</p>\n",
+    "<p>&nbsp&nbsp&nbsp&nbsp some definition</p>\n",
     "   \n",
-    "Example for multiple inheritance\n",
-    "class A:\n",
-    "   some definition\n",
+    "<p>Example for multiple inheritance</p>\n",
+    "<p>class A:</p>\n",
+    "<p>&nbsp&nbsp&nbsp&nbsp some definition</p>\n",
     "   \n",
-    "class C:\n",
-    "   some definition\n",
+    "<p>class C:</p>\n",
+    "<p>&nbsp&nbsp&nbsp&nbsp some definition</p>\n",
     "   \n",
-    "class B(A,C):\n",
-    "   some defintion\n",
-    "  "
+    "<p>class B(A,C):</p>\n",
+    "<p>&nbsp&nbsp&nbsp&nbsp some defintion</p>"
    ]
   },
   {
@@ -50,33 +49,42 @@
     "In method overriding calling overridden method through child class instance\n",
     "will invoke the child class version only\n",
     "\n",
-    "class A:\n",
-    "   def printString(self):\n",
-    "       print(\"from A\")\n",
+    "<p>class A:<p>\n",
+    "<p>&nbsp&nbsp&nbsp&nbsp def printString(self):</p>\n",
+    "<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp print(\"from A\")</p>\n",
     "       \n",
-    "class B(A):\n",
-    "   def printString(self):\n",
-    "       print(\"from B\")\n",
+    "<p>class B(A):</p>\n",
+    "<p>&nbsp&nbsp&nbsp&nbsp   def printString(self):</p>\n",
+    "<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp print(\"from B\")</p>\n",
     "       \n",
-    "if __name__ == '__main__':\n",
-    "   obj = B()\n",
-    "   obj.printString() # invokes the child class method\n",
+    "<p>if __name__ == '__main__':</p>\n",
+    "<p>&nbsp&nbsp&nbsp&nbsp obj = B()</p>\n",
+    "<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp obj.printString() # invokes the child class method</p>\n",
     "   \n",
     "   \n",
-    "Using 'super' keyword to invoke parent class method in method overriding\n",
-    "class A:\n",
-    "   def printString(self):\n",
-    "       print(\"from A\")\n",
+    "<p>Using 'super' keyword to invoke parent class method in method overriding</p>\n",
+    "<p>class A:<p>\n",
+    "<p>&nbsp&nbsp&nbsp&nbsp def printString(self):</p>\n",
+    "<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp print(\"from A\")</p>\n",
+    "  \n",
+    "<p>class B(A):</p>\n",
+    "<p>&nbsp&nbsp&nbsp&nbsp def printString(self):</p>\n",
+    "<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp super().printString() # calling parent class method from within child class\n",
+    "<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp print(\"from B\")</p>\n",
     "       \n",
-    "class B(A):\n",
-    "   def printString(self):\n",
-    "       super().printString() # calling parent class method from within child class\n",
-    "       print(\"from B\")\n",
-    "       \n",
-    "if __name__ == '__main__':\n",
-    "   obj = B()\n",
-    "   obj.printString() # invokes the child class method\n"
+    "     \n",
+    "<p>if __name__ == '__main__':</p>\n",
+    "<p>&nbsp&nbsp&nbsp&nbsp obj = B()</p>\n",
+    "<p>&nbsp&nbsp&nbsp&nbsp obj.printString() # invokes the child class method</p>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d4e49f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
