--- a/functions_in_python/ch1.ipynb
+++ b/functions_in_python/ch1.ipynb
@@ -96,7 +96,19 @@
     "    \n",
     "    for v in args:\n",
     "        if m<v: m=v\n",
-    "    return m"
+    "    return m\n",
+    "\n",
+    "maxval = find_max(83,405,91,372,548)\n",
+    "print(maxval)\n",
+    "\n",
+    "maxval = find_max(83,405,91,372,548,68,230,915,29,165)\n",
+    "print(maxval)\n",
+    "\n",
+    "def multipleParams(**kwargs):\n",
+    "    # kwargs inside the function is treated as dictionary\n",
+    "    print(kwargs)\n",
+    "    \n",
+    "multipleParams(name='alice',age=10,school='cps')"
    ]
   }
  ],
